--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,48 @@ body {
 }
 
 /* Add styles here! */
+
+.max-width-wrapper {
+  /* height: 50%; */
+  padding-top: 50px;
+}
+
+.one {
+  border-bottom: 0.4em solid grey;
+}
+
+.two {
+  background-color: darkgrey;
+  height: 100vh;
+}
+
+.intro-chunk {
+  background-color: white;
+  margin-left: 25%;
+  margin-right: 25%;
+  padding-left: 28px;
+  padding-right: 400px;
+}
+
+.card {
+  background-color: white;
+  margin-left: 25%;
+  margin-right: 25%;
+  padding-top: 5px;
+  border-bottom: 0.4em solid grey;
+  padding-left: 28px;
+  padding-right: 28px;
+}
+
+p strong {
+  color: rgb(36, 152, 107);
+}
+
+.indented-heading {
+  max-width: fit-content;
+  background-color: rgb(242, 200, 60);
+  padding: 20px 30px;
+  margin-left: -43px;
+  margin-top: 1px;
+  border-bottom: 0.3em solid rgb(191, 153, 30);
+}
