--- a/style.css
+++ b/style.css
@@ -10,47 +10,71 @@ body {
 }
 
 /* Add styles here! */
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+html {
+  font-size: 18px;
+}
 
 .max-width-wrapper {
-  padding-top: 50px;
-}
-
-.one {
-  border-bottom: 0.4em solid grey;
-}
-
-.two {
-  background-color: darkgrey;
-  height: 100vh;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 24px;
 }
 
 .intro-chunk {
-  background-color: white;
-  margin-left: 25%;
-  margin-right: 25%;
-  padding-left: 28px;
-  padding-right: 400px;
+  padding: 96px 0 48px;
+  max-width: 400px;
+}
+
+.intro-chunk p {
+  font-size: 1.25rem;
+  line-height: 1.4;
+}
+
+.intro-chunk strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+.intro-chunk .title {
+  font-size: 2rem;
+  margin-bottom: 48px;
+}
+
+header {
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
+}
+
+main {
+  background-color: hsl(0deg, 0%, 60%);
+  padding: 96px 0;
 }
 
 .card {
   background-color: white;
-  margin-left: 25%;
-  margin-right: 25%;
-  padding-top: 5px;
-  border-bottom: 0.4em solid grey;
-  padding-left: 28px;
-  padding-right: 28px;
-}
-
-p strong {
-  color: hsl(160deg, 100%, 30%);
+  padding: 24px;
+  margin: -24px;
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
 }
 
 .indented-heading {
-  max-width: fit-content;
-  background-color: hsl(45deg, 100%, 50%);
-  padding: 20px 30px;
-  margin-left: -43px;
-  margin-top: 1px;
-  border-bottom: 0.3em solid hsl(45deg, 100%, 40%);
+  background: hsl(45deg, 100%, 50%);
+  margin-left: -32px;
+  margin-top: -16px;
+  padding: 16px 32px;
+  width: fit-content;
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+}
+
+.card p {
+  font-size: 1.25rem;
+  line-height: 1.4;
+}
+
+.card p:last-child {
+  margin-bottom: 0;
 }
